# YRA--backend

./: .dockerignore  .env.example  .gitignare  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sqlite3  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
apps/services/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
apps/services/migrations/: 0001_initial.py  0002_event.py  0003_transaction_comment.py  0004_alter_attendance_options_alter_parent_options_and_more.py  0005_galleryphoto_activity_price_alter_event_price.py
config/: settings.py  urls.py
